--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.13.0",
+    "react-select": "^5.10.2",
     "typewriter-effect": "^2.22.0"
   },
   "devDependencies": {
