--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@react-oauth/google": "^0.13.4",
     "axios": "^1.13.4",
     "bootstrap": "^5.3.8",
+    "chart.js": "^4.5.1",
     "framer-motion": "^12.29.2",
     "lucide-react": "^0.563.0",
     "react": "^19.2.0",
     "react-bootstrap": "^2.10.10",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.0",
     "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.5.0",
