--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.13.0",
     "react-select": "^5.10.2",
+    "sweetalert2": "^11.26.21",
     "typewriter-effect": "^2.22.0"
   },
   "devDependencies": {
